--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -26,7 +26,11 @@ body {
 	box-shadow: 0px 1px 3px #2a2a2a;
 }
 
-
+.navbar-inverse .navbar-brand {
+	color: #232B38;
+	font-family: 'architects_daughterregular';
+	font-size: 26px;
+}
 
 
 
