--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,18 @@
 <h2>Sign up</h2>
-
+<br />
+<br />
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="form-inputs col-xs-10 col-xs-offset-1">
     <%= f.input :email, required: true, autofocus: true %>
+    <br />
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+    <br />
     <%= f.input :password_confirmation, required: true %>
   </div>
-
-  <div class="form-actions">
+  <br />
+  <div class="form-actions col-xs-offset-1">
     <%= f.button :submit, "Sign up" %>
   </div>
 <% end %>
