--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -38,4 +38,17 @@
 			<%= link_to 'Delete', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
 		<% end %>
 	</div>
+	<br />
+	<br />
+	<div class="clear"></div>
+	<%= simple_form_for @comment, url: '#' do |f| %>
+	  <%= f.input :message %>
+	  <br />
+	  <%= f.input :rating %>
+	  <br />
+	  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+	<% end %>
 </div>
+
+
+
