--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -44,7 +44,7 @@
 	<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
 	  <%= f.input :message %>
 	  <br />
-	  <%= f.input :rating %>
+	  <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
 	  <br />
 	  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
 	<% end %>
