--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -41,13 +41,16 @@
 	<br />
 	<br />
 	<div class="clear"></div>
-	
-
-	<!-- Button trigger modal -->
-	<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-	  Add a Comment
-	</button>
-
+	<br />
+	<br />
+	<div class="col-xs-10 col-xs-offset-1">
+		<h1 class="pull-left">Comments</h1>
+		<!-- Button trigger modal -->
+		<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+		  Add a Comment
+		</button>
+	</div>
+	<div class="clear"></div>
 	<!-- Modal -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	  <div class="modal-dialog">
@@ -74,10 +77,9 @@
 
 	<br />
 	<br />
-	<h1>Comments</h1>
 
 	<% @place.comments.each do |comment| %>
-		<div>
+		<div class="col-xs-12 col-sm-6">
 			<blockquote>
 			  <% if comment.humanized_rating.present? %>
 		        <b><%= comment.humanized_rating %></b> -
