bug fix with modal ID's

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -90,13 +90,13 @@
 	<div class="col-xs-10 col-xs-offset-1">
 		<h1 class="pull-left">Comments</h1>
 		<!-- Button trigger modal -->
-		<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+		<button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#comment">
 		  Add a Comment
 		</button>
 	</div>
 	<div class="clear"></div>
 	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal fade" id="comment" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	  <div class="modal-dialog">
 	    <div class="modal-content">
 	      <div class="modal-header">
