--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -2,6 +2,7 @@
 
 <p>
 	Congrats! <b> A comment has been added on Nomster</b>
+	Check in out <%= link_to 'here', place_url(@place) %>
 </p>
 
 Best, <br />
