--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -25,6 +25,7 @@ body {
 	background:url('/assets/wild_flowers.png');
 	border-radius: 0;
 	box-shadow: 0px 1px 3px #2a2a2a;
+  margin-bottom:0;
 }
 
 .navbar-inverse .navbar-brand {
@@ -66,6 +67,32 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    height: 550px;
+    width: 100%;
+}
+
+.carousel-caption {
+    font-family: 'architects_daughterregular';
+    font-size: 40px;
+    font-weight: 100;
+    text-shadow: rgba(0,0,0,0.95) 2px 2px;
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    position:absolute;
+    left:0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+
+
+
+
+
 
 
 
