--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -34,6 +34,11 @@ body {
 	font-size: 26px;
 }
 
+.navbar-inverse .navbar-nav > li > a {
+  color: #232B38;
+
+}
+
 .field_with_errors {
   color: #ff3333;
   background-color: #FFEEEE;
@@ -43,6 +48,10 @@ body {
 
 #map {
   height: 300px;
+}
+
+.index_pic {
+  
 }
 
 .clear {
@@ -56,6 +65,7 @@ blockquote {
   padding: 0.5em 10px;
   quotes: "\201C""\201D""\2018""\2019";
 }
+
 blockquote:before {
   color: #ccc;
   content: open-quote;
