--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -53,7 +53,7 @@
 			<div class="col-xs-12">
 				<blockquote>
 				  <% if place.photos.last.present? %>
-				    <%= image_tag place.photos.last.picture %>
+				    <%= image_tag place.photos.last.picture, :class => "index_pic" %>
 			      <% end %>
 				</blockquote>
 			</div>
